# dde-application-wizard

./: CMakeLists.txt  README.md  main.cpp  pkutils.h
.reuse/: dep5
dbus/: launcher1compat.cpp  launcher1compat.h
debian/: changelog  control  rules
polkit-1/actions/: org.deepin.dde.appwiz.uninstall.policy
polkit-1/rules.d/: org.deepin.dde.application-wizard.rules
scripts/: dde-appwiz-linglong-uninstaller.sh  dde-appwiz-uninstaller.sh
toolGenerate/qdbusxml2cpp/: org.deepin.dde.daemon.Launcher1Adaptor.cpp  org.deepin.dde.daemon.Launcher1Adaptor.h
translations/: dde-application-wizard_de.ts  dde-application-wizard_es.ts  dde-application-wizard_hu.ts  dde-application-wizard_pl.ts  dde-application-wizard_pt.ts  dde-application-wizard_pt_BR.ts  dde-application-wizard_ru.ts  dde-application-wizard_ta.ts  dde-application-wizard_tr.ts  dde-application-wizard_uk.ts  dde-application-wizard_zh_CN.ts
